# santa2022

./: LICENSE  README.md  pyproject.toml  setup.cfg
notebooks/: analysis.ipynb  exploration.ipynb  getting-started.ipynb  solution_analysis.ipynb  whatever.ipynb
src/santa_2022/: array.py  common.py  generate_lkh_graph.py  greedy.py  original.py  plot_path.py  plotting.py  post_processing.py  santautils.py  tsp.py
src/santa_2022/.ipynb_checkpoints/: plotting-checkpoint.py
tests/: conftest.py  test_array.py  test_integration.py  test_original.py  test_santa.py  test_tsp.py
tsp/: santa2022-8-output.txt  santa2022-8.par
