[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santa2022-solution"
version = "0.0.1"
authors = [
  { name="Samo Seljak"},
]
description = "Code for Kaggle competition Santa 2022"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
dependencies = [
    "tqdm",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6"
]

[project.optional-dependencies]
test = [
    "pytest>=7.2",
    "pytest-cov>=4.0"
]

[project.urls]
homepage = "https://www.kaggle.com/competitions/santa-2022/overview"

[tool.pytest.ini_options]
addopts = "--cov=santa_2022"
testpaths = ["tests",]